--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,7 +1,13 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+:root {
+  --white-soft: #f1f1f1;
+  --black-soft: #333333;
+  --day-gradient: linear-gradient(to right, #fbc531, #4e73df);
+  --night-gradient: linear-gradient(to right, #1e3a8a, #0f172a);
 }
