--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,89 @@
-body {
+.body {
+  width: 100vw;
+  height: 100vh;
+  padding-inline: 10vw;
+
+  display: grid;
+  grid-template-rows: 10vh 1fr 5vh;
+
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: var(--black-soft);
+}
+/* header */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.header__search-form {
+  width: 60%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.header__input {
+  width: 50%;
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid var(--black-soft);
+  background-color: transparent;
+  outline: none;
+}
+.haeder__btn {
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid var(--black-soft);
+  background-color: var(--black-soft);
+  cursor: pointer;
+}
+.header__i {
+  color: var(--white-soft);
+}
+/* main */
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main__info-container {
+  padding: 10px;
+  width: 800px;
+  height: 600px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr 1fr;
+  gap: 10px;
+
+  border-radius: 50px;
+  overflow: hidden;
+}
+.item-grid {
+  border-radius: 50px;
+  background-color: var(--black-transparent);
+}
+.main__place {
+  grid-column: 1 / 3;
+}
+.main__temperature {
+  grid-row: 2 / 4;
+}
+.main__date-and-time {
+  grid-column: 1 / 3;
+}
+/* footer */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .temperature-font {
   font-family: "Orbitron", sans-serif;
@@ -11,6 +92,7 @@ body {
   color: #ff6f00;
 }
 .header__logo-name {
+  margin: 0;
   font-family: "Knewave", cursive;
   font-size: 2rem;
   letter-spacing: 3px;
