--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,12 +9,15 @@
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+
+  color: var(--white-soft);
 }
 /* header */
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 40px;
 }
 .header__logo-container {
   display: flex;
@@ -22,10 +25,14 @@
   align-items: center;
   gap: 10px;
 }
+.header__logo-name {
+  margin: 0;
+  font-family: "Knewave", cursive;
+  font-size: 2rem;
+  letter-spacing: 3px;
+}
 .header__search-form {
   position: relative;
-
-  width: 60%;
 
   display: flex;
   justify-content: center;
@@ -33,28 +40,29 @@
   gap: 10px;
 }
 .header__input {
-  width: 50%;
-  padding: 10px;
+  width: 400px;
+  padding: 5px;
   border-radius: 10px;
-  border: 2px solid var(--black-soft);
+  border: 2px solid var(--white-soft);
   background-color: transparent;
   outline: none;
+  background-color: var(--black-transparent);
 }
 .header__btn {
-  padding: 10px;
+  padding: 5px;
   border-radius: 10px;
-  border: 2px solid var(--black-soft);
-  background-color: var(--black-soft);
+  border: 2px solid var(--white-soft);
+  background-color: var(--white-soft);
   cursor: pointer;
 }
 .header__i {
-  color: var(--white-soft);
+  color: var(--black-soft);
 }
 .header__error-container {
   padding: 5px;
   position: absolute;
-  top: 50px;
-  left: 147px;
+  top: 40px;
+  left: 0px;
 
   display: flex;
   justify-content: center;
@@ -65,6 +73,7 @@
   opacity: 0;
 
   border: 2px solid red;
+  background-color: var(--white-soft);
   border-radius: 10px;
 }
 .header__error-form {
@@ -91,24 +100,73 @@
   height: 600px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 2fr 2fr 1fr;
-  gap: 10px;
+  grid-template-rows: 1fr 3fr 1fr 1fr;
+  gap: 2px;
 
   border-radius: 50px;
   overflow: hidden;
 }
 .item-grid {
-  border-radius: 50px;
+  border-radius: 20px;
   background-color: var(--black-transparent);
+  backdrop-filter: blur(10px);
+  font-family: "Orbitron", sans-serif;
+  font-weight: 400;
 }
+/* name of place */
 .main__place {
   grid-column: 1 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main__city {
+  font-size: 2rem;
+}
+/* status condition */
+.main__status-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main__icon {
+  font-size: 10rem;
+}
+.main__status-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main__condition {
+  font-size: 2rem;
+}
+/* temperature */
+.main__temperature-container {
+  padding: 40px;
+
+  grid-row: 2 / 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.main__celcius {
+  padding-inline: 10px;
+  font-size: 3rem;
+  align-self: flex-start;
 }
 .main__temperature {
-  grid-row: 2 / 4;
+  font-size: 7rem;
 }
+/* date and descriptions */
 .main__date-and-time {
+  padding: 10px;
   grid-column: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: flex-start;
+  align-items: center;
 }
 /* footer */
 .footer {
@@ -122,20 +180,13 @@
   font-size: 2rem;
   color: #ff6f00;
 }
-.header__logo-name {
-  margin: 0;
-  font-family: "Knewave", cursive;
-  font-size: 2rem;
-  letter-spacing: 3px;
-}
+
 /* dinamicos */
 .body-day {
   background: var(--day-gradient);
-  color: var(--black-soft);
 }
 .body-night {
   background: var(--night-gradient);
-  color: var(--white-soft);
 }
 .visible {
   visibility: visible;
