--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,6 @@
 .body {
   width: 100vw;
   height: 100vh;
-  padding-inline: 10vw;
 
   display: grid;
   grid-template-rows: 10vh 1fr 5vh;
@@ -11,13 +10,18 @@
   line-height: 1.5;
 
   color: var(--white-soft);
+  background-color: var(--black-soft);
 }
 /* header */
 .header {
+  padding-inline: 10vw;
+
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 40px;
+
+  background-color: var(--black-transparent);
 }
 .header__logo-container {
   display: flex;
@@ -88,8 +92,13 @@
   border: 2px solid red;
   border-radius: 50%;
 }
+
 /* main */
 .main {
+  padding-inline: 10vw;
+
+  position: relative;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,12 +134,39 @@
 }
 /* status condition */
 .main__status-img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .main__icon {
+  position: absolute;
+  font-size: 80px;
+  animation: carousel 10s linear infinite;
+
   font-size: 10rem;
+}
+@keyframes carousel {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(150%);
+    opacity: 0;
+  }
+  51% {
+    transform: translateX(-150%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 .main__status-text {
   display: flex;
@@ -168,11 +204,46 @@
   justify-content: flex-start;
   align-items: center;
 }
+/* loader */
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  background-color: var(--black-transparent);
+  display: none;
+}
+.loader {
+  width: 100px;
+  height: 100px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* footer */
 .footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--black-transparent);
 }
 .temperature-font {
   font-family: "Orbitron", sans-serif;
