--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,8 +8,11 @@
 :root {
   --white-soft: #f1f1f1;
   --black-soft: #333333;
-  --day-gradient: linear-gradient(to bottom, #f9d423, #f6ab39, #f37c3a, #50b9d6, #5ccbf3, #9bd7fc);
-  --night-gradient: linear-gradient(to bottom, #1e3a8a, #375899, #4a74ad, #5a8bc2, #6ca3d7, #80bbea);
   --black-transparent: rgba(0, 0, 0, 0.2);
   --semi-transparent-white: rgba(255, 255, 255, 0.7);
+}
+@font-face {
+  font-family: "Quicksand";
+  src: url(/src/asset/font/Quicksand/Quicksand-VariableFont_wght.ttf) format("truetype");
+  font-weight: 400;
 }
