--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,9 +10,10 @@
 }
 /* header */
 .header {
-  padding-inline: 10vw;
+  padding-inline: 20vw;
 
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr;
   justify-content: center;
   align-items: center;
   gap: 40px;
@@ -22,34 +23,40 @@
 .header__logo {
   font-size: 2rem;
 }
-.header__search-form {
+.header__search {
+  height: 50%;
+  width: 100%;
+
   position: relative;
 
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  justify-content: flex-end;
+  gap: 40px;
 }
 .header__input {
-  width: 400px;
-  padding: 5px;
+  min-width: 300px;
+  padding-inline: 10px;
+
   border-radius: 10px;
-  border: 2px solid var(--white-soft);
-  background-color: transparent;
+  border: none;
   outline: none;
   background-color: var(--black-transparent);
+  color: var(--white-soft);
 }
 .header__btn {
-  padding: 5px;
+  padding: 10px;
   border-radius: 10px;
-  border: 2px solid var(--white-soft);
-  background-color: var(--white-soft);
+  border: none;
   cursor: pointer;
+  background-color: var(--black-transparent);
+  color: var(--white-soft);
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
-.header__i {
+.header__btn:hover {
+  background-color: var(--semi-transparent-white);
   color: var(--black-soft);
 }
-.header__error-container {
+.header__errorContainer {
   padding: 5px;
   position: absolute;
   top: 40px;
@@ -67,11 +74,11 @@
   background-color: var(--white-soft);
   border-radius: 10px;
 }
-.header__error-form {
+.header__error {
   font-size: 1rem;
   color: red;
 }
-.header__error-container i {
+.header__error i {
   padding: 5px 12px;
 
   font-size: 1rem;
@@ -90,7 +97,7 @@
   justify-content: center;
   align-items: center;
 }
-.main__info-container {
+.main__infoContainer {
   padding: 10px;
   width: 800px;
   height: 600px;
@@ -102,7 +109,7 @@
   border-radius: 50px;
   overflow: hidden;
 }
-.item-grid {
+.item {
   border-radius: 20px;
   background-color: var(--black-transparent);
   backdrop-filter: blur(10px);
@@ -120,7 +127,7 @@
   font-size: 2rem;
 }
 /* status condition */
-.main__status-img {
+.main__statusImg {
   position: relative;
   width: 100%;
   height: 100%;
@@ -155,7 +162,7 @@
     opacity: 1;
   }
 }
-.main__status-text {
+.main__statusText {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -164,7 +171,7 @@
   font-size: 2rem;
 }
 /* temperature */
-.main__temperature-container {
+.main__temperatureContainer {
   padding: 40px;
 
   grid-row: 2 / 4;
@@ -182,7 +189,7 @@
   font-size: 7rem;
 }
 /* date and descriptions */
-.main__date-and-time {
+.main__dateTime {
   padding: 10px;
   grid-column: 1 / 3;
   display: flex;
@@ -192,7 +199,7 @@
   align-items: center;
 }
 /* loader */
-.loader-container {
+.loaderContainer {
   position: fixed;
   top: 0;
   left: 0;
@@ -231,12 +238,6 @@
   justify-content: center;
   align-items: center;
   background-color: var(--black-transparent);
-}
-.temperature-font {
-  font-family: "Orbitron", sans-serif;
-  font-weight: 400;
-  font-size: 2rem;
-  color: #ff6f00;
 }
 
 /* dinamicos */
