--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,13 +31,12 @@
 
   display: flex;
   justify-content: flex-end;
-  gap: 40px;
+  gap: 2px;
 }
 .header__input {
   min-width: 300px;
   padding-inline: 10px;
 
-  border-radius: 10px;
   border: none;
   outline: none;
   background-color: var(--black-transparent);
@@ -45,7 +44,7 @@
 }
 .header__btn {
   padding: 10px;
-  border-radius: 10px;
+
   border: none;
   cursor: pointer;
   background-color: var(--black-transparent);
@@ -56,65 +55,38 @@
   background-color: var(--semi-transparent-white);
   color: var(--black-soft);
 }
-.header__errorContainer {
+.header__errorSearch {
   padding: 5px;
+
   position: absolute;
-  top: 40px;
-  left: 0px;
+  top: 70px;
+  right: 0;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-
-  visibility: hidden;
   opacity: 0;
 
-  border: 2px solid red;
-  background-color: var(--white-soft);
+  color: red;
+  background-color: var(--semi-transparent-white);
   border-radius: 10px;
 }
-.header__error {
-  font-size: 1rem;
-  color: red;
-}
-.header__error i {
-  padding: 5px 12px;
-
-  font-size: 1rem;
-  color: red;
-  border: 2px solid red;
-  border-radius: 50%;
-}
-
 /* main */
 .main {
-  padding-inline: 10vw;
-
-  position: relative;
+  padding-inline: 20vw;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .main__infoContainer {
-  padding: 10px;
-  width: 800px;
-  height: 600px;
+  width: 80%;
+  height: 80%;
+
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 3fr 1fr 1fr;
   gap: 2px;
-
-  border-radius: 50px;
-  overflow: hidden;
 }
 .item {
-  border-radius: 20px;
   background-color: var(--black-transparent);
-  backdrop-filter: blur(10px);
-  font-family: "Orbitron", sans-serif;
-  font-weight: 400;
 }
 /* name of place */
 .main__place {
@@ -129,19 +101,15 @@
 /* status condition */
 .main__statusImg {
   position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  overflow: hidden;
 }
 .main__icon {
-  position: absolute;
-  font-size: 80px;
   animation: carousel 10s linear infinite;
-
   font-size: 10rem;
 }
 @keyframes carousel {
@@ -168,22 +136,19 @@
   align-items: center;
 }
 .main__condition {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 /* temperature */
 .main__temperatureContainer {
-  padding: 40px;
-
   grid-row: 2 / 4;
+
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
 .main__celcius {
-  padding-inline: 10px;
   font-size: 3rem;
-  align-self: flex-start;
 }
 .main__temperature {
   font-size: 7rem;
@@ -191,12 +156,14 @@
 /* date and descriptions */
 .main__dateTime {
   padding: 10px;
+
   grid-column: 1 / 3;
+
   display: flex;
   flex-direction: column;
-  gap: 10px;
   justify-content: flex-start;
   align-items: center;
+  gap: 10px;
 }
 /* loader */
 .loaderContainer {
@@ -210,6 +177,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   z-index: 10;
   background-color: var(--black-transparent);
   display: none;
@@ -217,8 +185,8 @@
 .loader {
   width: 100px;
   height: 100px;
-  border: 5px solid #f3f3f3;
-  border-top: 5px solid #3498db;
+  border: 2px solid var(--white-soft);
+  border-top: 2px solid var(--black-soft);
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
