Refactor for responsive design

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,3 +16,102 @@
   src: url(/src/asset/font/Quicksand/Quicksand-VariableFont_wght.ttf) format("truetype");
   font-weight: 400;
 }
+/* keyframes */
+
+@keyframes carousel {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(150%);
+    opacity: 0;
+  }
+  51% {
+    transform: translateX(-150%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes day {
+  0% {
+    background-position: 0% 82%;
+  }
+  10% {
+    background-position: 10% 75%;
+  }
+  20% {
+    background-position: 20% 68%;
+  }
+  30% {
+    background-position: 30% 60%;
+  }
+  40% {
+    background-position: 40% 55%;
+  }
+  50% {
+    background-position: 50% 50%;
+  }
+  60% {
+    background-position: 60% 45%;
+  }
+  70% {
+    background-position: 70% 40%;
+  }
+  80% {
+    background-position: 80% 35%;
+  }
+  90% {
+    background-position: 90% 28%;
+  }
+  100% {
+    background-position: 100% 19%;
+  }
+}
+@keyframes night {
+  0% {
+    background-position: 0% 80%;
+  }
+  10% {
+    background-position: 10% 75%;
+  }
+  20% {
+    background-position: 20% 70%;
+  }
+  30% {
+    background-position: 30% 65%;
+  }
+  40% {
+    background-position: 40% 60%;
+  }
+  50% {
+    background-position: 50% 55%;
+  }
+  60% {
+    background-position: 60% 50%;
+  }
+  70% {
+    background-position: 70% 45%;
+  }
+  80% {
+    background-position: 80% 40%;
+  }
+  90% {
+    background-position: 90% 35%;
+  }
+  100% {
+    background-position: 100% 30%;
+  }
+}
