--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,40 +1,40 @@
 .body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100dvh;
+
+  margin: 0;
 
   display: grid;
-  grid-template-rows: 10vh 1fr 5vh;
+  grid-template-rows: minmax(10vh, auto) 1fr minmax(5vh, auto);
 
   font-family: "Quicksand", sans-serif;
   color: var(--white-soft);
 }
+
 /* header */
 .header {
-  padding-inline: 20vw;
+  padding-inline: 200px;
 
-  display: grid;
-  grid-template-columns: auto 1fr;
-  justify-content: center;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 40px;
 
   background-color: var(--black-transparent);
 }
 .header__logo {
   font-size: 2rem;
+  margin: 0;
 }
 .header__search {
-  height: 50%;
-  width: 100%;
-
   position: relative;
 
   display: flex;
-  justify-content: flex-end;
-  gap: 2px;
+  gap: 5px;
 }
 .header__input {
-  min-width: 300px;
+  width: 100%;
+  max-width: 450px;
+
   padding-inline: 10px;
 
   border: none;
@@ -67,26 +67,34 @@
   color: red;
   background-color: var(--semi-transparent-white);
   border-radius: 10px;
+
+  transition: opacity 0.3s ease;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
+.header__errorSearch.show {
+  opacity: 1;
 }
 /* main */
 .main {
-  padding-inline: 20vw;
+  padding-inline: 200px;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .main__infoContainer {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  max-width: 1200px;
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 3fr 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto) minmax(100px, auto);
   gap: 2px;
 }
 .item {
   background-color: var(--black-transparent);
+  padding: 5px;
 }
 /* name of place */
 .main__place {
@@ -112,30 +120,10 @@
   animation: carousel 10s linear infinite;
   font-size: 10rem;
 }
-@keyframes carousel {
-  0% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  50% {
-    transform: translateX(150%);
-    opacity: 0;
-  }
-  51% {
-    transform: translateX(-150%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
 .main__statusText {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.main__condition {
   font-size: 1.5rem;
 }
 /* temperature */
@@ -155,13 +143,11 @@
 }
 /* date and descriptions */
 .main__dateTime {
-  padding: 10px;
-
   grid-column: 1 / 3;
 
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 10px;
 }
@@ -183,21 +169,14 @@
   display: none;
 }
 .loader {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
+  max-width: 200px;
+  max-height: 200px;
   border: 2px solid var(--white-soft);
   border-top: 2px solid var(--black-soft);
   border-radius: 50%;
   animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 /* footer */
@@ -226,43 +205,6 @@
   background-size: 10000% 10000%;
   animation: day 20s ease-in-out infinite;
 }
-
-@keyframes day {
-  0% {
-    background-position: 0% 82%;
-  }
-  10% {
-    background-position: 10% 75%;
-  }
-  20% {
-    background-position: 20% 68%;
-  }
-  30% {
-    background-position: 30% 60%;
-  }
-  40% {
-    background-position: 40% 55%;
-  }
-  50% {
-    background-position: 50% 50%;
-  }
-  60% {
-    background-position: 60% 45%;
-  }
-  70% {
-    background-position: 70% 40%;
-  }
-  80% {
-    background-position: 80% 35%;
-  }
-  90% {
-    background-position: 90% 28%;
-  }
-  100% {
-    background-position: 100% 19%;
-  }
-}
-
 .body-night {
   background: linear-gradient(
     45deg,
@@ -280,45 +222,107 @@
   background-size: 10000% 10000%;
   animation: night 20s ease-in-out infinite;
 }
-
-@keyframes night {
-  0% {
-    background-position: 0% 80%;
-  }
-  10% {
-    background-position: 10% 75%;
-  }
-  20% {
-    background-position: 20% 70%;
-  }
-  30% {
-    background-position: 30% 65%;
-  }
-  40% {
-    background-position: 40% 60%;
-  }
-  50% {
-    background-position: 50% 55%;
-  }
-  60% {
-    background-position: 60% 50%;
-  }
-  70% {
-    background-position: 70% 45%;
-  }
-  80% {
-    background-position: 80% 40%;
-  }
-  90% {
-    background-position: 90% 35%;
-  }
-  100% {
-    background-position: 100% 30%;
-  }
-}
-
 .visible {
   visibility: visible;
   opacity: 1;
   transition: opacity 0.5s ease;
+}
+/* Media queris */
+
+/* Móviles pequeños (<= 576px) */
+@media (max-width: 576px) {
+  .body {
+    width: 100%;
+  }
+  .header {
+    padding-inline: 20px;
+    padding-block: 10px;
+
+    flex-direction: column;
+    gap: 10px;
+  }
+  .header__logo {
+    font-size: 1.2rem;
+  }
+  .main {
+    padding-inline: 20px;
+  }
+  .main__infoContainer {
+    display: flex;
+    flex-direction: column;
+  }
+  .main__place {
+    grid-column: unset;
+    order: 1;
+  }
+  .main__city {
+    font-size: 1.2rem;
+  }
+  .main__statusImg {
+    order: 2;
+  }
+  .main__icon {
+    font-size: 5rem;
+  }
+  .main__temperatureContainer {
+    grid-column: unset;
+    order: 3;
+  }
+  .main__statusText {
+    order: 4;
+    font-size: 1.2rem;
+  }
+  .main__dateTime {
+    grid-column: unset;
+    order: 5;
+    text-align: center;
+  }
+  .main__celcius {
+    font-size: 2rem;
+  }
+  .main__temperature {
+    font-size: 5rem;
+  }
+  .loader {
+    max-width: 100px;
+    max-height: 100px;
+  }
+}
+
+/* Pantallas grandes (>= 1400px) */
+@media (min-width: 1400px) {
+  .header {
+    padding-inline: 300px;
+  }
+  .header__logo {
+    font-size: 2.5rem;
+  }
+  .header__search {
+    gap: 10px;
+  }
+  .header__input {
+    max-width: 550px;
+  }
+  .main {
+    padding-inline: 300px;
+  }
+  .item {
+    background-color: var(--black-transparent);
+    padding: 10px;
+  }
+  .main__city {
+    font-size: 2.5rem;
+  }
+  .main__icon {
+    font-size: 10.5rem;
+  }
+  .main__statusText {
+    font-size: 2rem;
+  }
+  .main__celcius {
+    font-size: 3.5rem;
+  }
+  .main__temperature {
+    font-size: 7.5rem;
+  }
 }
