--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,11 +24,11 @@
     opacity: 1;
   }
   50% {
-    transform: translateX(150%);
+    transform: translateX(300px);
     opacity: 0;
   }
   51% {
-    transform: translateX(-150%);
+    transform: translateX(-300px);
     opacity: 0;
   }
   100% {
